<resources>
		<!--Keys, NOT TO TRANSLATE !-->
		<string name="gallery_url_key">galleryUrl</string>
		<string name="username_key">username</string>
		<string name="password_key">password</string>
		<string name="port_key">port</string>
		<string name="firsttime_key">firsttime</string>
		<string name="clear_cache_key">clear_cache</string>
		<string name="g2android_path_key">g2android_path</string>
		<string name="g2android_temp_path_key">g2android_cache_path</string>
		<string name="default_summary_key">DefaultSummary</string>
		<string name="default_description_key">DefaultDescription</string>
		<!-- end of Keys -->
		
		<!--Default values , NOT TO TRANSLATE !-->
		<string name="project_home_url">http://code.google.com/p/g2android</string>
		<string name="licence">GNU General Public License v2</string>
		<string name="port_default">80</string>
		<string name="gallery_url_default">http://g2.dahanne.net</string>
		<string name="app_name">G2Android</string>
		<string name="g2android_path_default">g2android</string>
		<string name="g2android_cache_path_default">tmp</string>
		<!-- end of Default Values -->
		
		
        <!-- Activities -->
        <string name="welcome_to_g2android">Welcome to G2Android</string>
        <string name="enter_gallery_title">Enter gallery !</string>
        <string name="connect_to_gallery_title">Connect to gallery !</string>
        <string name="gallery_url_title">Gallery Url</string>
        <string name="g2android_no_gallery_configured">No gallery configured! Go to Menu->Settings to
                fix this !</string>
        <string name="g2android_default_gallery_configured">Configured with the default gallery, change gallery Url in Menu->Settings</string>
        <string name="gallery_url_is_not_valid">The gallery url provided is not valid! Go to
                Menu->Settings to fix this !</string>
        <string name="gallery_credentials_are_not_valid">The gallery credentials provided are not valid! Go to
                Menu->Settings to fix this ! (Hint : try removing your credentials to check the gallery url is correct)</string>
        <string name="gallery_url_summary">Enter here the base name of your gallery, ex :
                http://myhost.com/gallery2</string>
        <string name="gallery_url_dialog_message">Enter here the base name of your gallery, ex :
                http://myhost.com/gallery2, or http://myhost.com:8080 or http://myhost.com:8080/path</string>
        <string name="username_title">Username</string>
        <string name="username_summary">If your gallery needs it, enter here your
                username</string>
        <string name="password_title">Password</string>
        <string name="password_summary">If your gallery needs it, enter here your
                password</string>
        <string name="port_title">Port</string>
        <string name="port_summary">The default port is 80, but if your gallery uses
                something different, change it here</string>        
        <string name="firsttime_title">Welcome to G2Android !</string>
        <string name="ok">OK</string>
        <string name="about_label">About</string>
        <string name="about_title">About</string>
        <string name="about_shortcut">a</string>
        <string name="add_photo_label">Add a photo in this album</string>
        <string name="add_photo_shortcut">a</string>
        <string name="create_album_label">Create a new subalbum</string>
        <string name="create_album_shortcut">c</string>
		<string name="connecting_to_the_gallery">Connecting to the gallery...</string>
		<string name="loggedin_as">Logged in as </string>
		<string name="not_logged_in">Not logged in</string>
		<string name="please_wait">Please wait...</string>
		<string name="problem">Problem</string>
		<string name="not_connected">You could not get connected to the configured gallery : \n</string>
		<string name="verify_your_settings">\n\nPlease verify your settings or check your device has access to the internet</string>
		<string name="exception_thrown">\n\nA problem occurred during the gallery connection, the detail is : \n</string>
		<string name="fetching_gallery_albums">Fetching gallery albums...</string>
		<string name="creating_new_album">Creating new album...</string>
		<string name="what_is_g2android">
                G2Android is a client to access a remote Gallery2 installation.
                The     gallery configured by default is a sample Gallery2 installation, for
                you to test if you don't have a gallery configured yet.
                You can change the default gallery Url in Menu->Settings
                You can find more sample gallery addresses at this web address :
                http://gallery.menalto.com/gallery/demosites/
                G2Android\'s intent is to display the content of YOUR gallery2
                installation not the sample gallery !
        </string>
        <string name="full_image_title">Image</string>
        <string name="settings_label">Settings...</string>
        <string name="settings_title">G2Android settings</string>
        <string name="settings_shortcut">s</string>
        <string name="show_albums_title">G2Android Albums</string>
        <string name="show_gallery_title">G2Android Gallery</string>
		<string name="view_album_pictures">View this album pictures !</string>
		<string name="current_version">Version : 1.6.0</string>
		<string name="project_home">Project Home : </string>
		<string name="album_is_empty">This album does not contain any pictures !</string>
		<string name="type_new_subalbum_name">Type in your new subalbum name : </string>
		<string name="create_subalbum">Create subalbum !</string>
		<string name="adding_photo">Uploading photo to the album</string>
		<string name="loading_first_photos_from_album">Loading first photos from album</string>
		
		<!-- New strings since 1.2.1 -->
		<string name="g2android_temp_path_title">G2AndroidTempPath</string>
		<string name="g2android_path_title">G2AndroidPath</string>
		<string name="g2android_path_summary">The place on your SDCard where G2Android will store its data</string>
		<string name="g2android_temp_path_summary">The subdirectory where G2Android will store its cache</string>
		<string name="clear_cache_title">Clear cache</string>
		<string name="clear_cache_summary">Clear cache when starting a new session</string>
		<string name="cache_cleared">Cache successfully cleared !</string>
		
		<string name="external_storage_problem">No mounted storage available, please check your sdcard is plugged in</string>
		<string name="gallery_connection_settings">Gallery connection settings</string>
		<string name="cache_settings">Cache settings</string>
	    <string name="download_full_res_image_title">Download full res.</string>
		<string name="image_successfully_downloaded">Image successfully downloaded to sd card</string>
		<string name="album_successfully_created">Album was successfully created !</string>
		<string name="image_successfully_created">Image was successfully added !</string>
		
		<string name="image_properties">Properties</string>
		<string name="name">Name</string>
		<string name="title">Title</string>
		<string name="caption">Caption</string>
		<string name="hidden">Hidden</string>
		<string name="full_res_filesize">Full res. filesize</string>
		<string name="full_res_width">Full res. width</string>
		<string name="full_res_height">Full res. height</string>

		<string name="loading_photo">loading picture ...</string>
		<string name="showing_picture">Showing picture :  </string>
		<string name="no_more_pictures">No more pictures in this album </string>
		
		<!-- New strings since 1.3.0 -->
		<string name="share_image_title">Share this photo url</string>
		<string name="send_image_title">Send this photo to</string>
		<string name="choose_action">Choose an action</string>
		<string name="first_photo">First</string>
		<string name="last_photo">Last</string>
		<string name="choose_photo_number">Jump to photo no.</string>
		<string name="choose_photo_number_title">Go to photo number ...</string>
		<string name="cancel">Cancel</string>
		<string name="choose_subalbum_name">Choose new album name</string>
		
		<!--  new string since 1.5.0 -->
		<string name="url_validation_problem">The url you provided is not valid, please double check it does not contain spaces or other special characters !</string>
		<string name="upload_photo_title">Upload photo(s) with G2Android</string>
		<string name="take_picture_label">Take picture and send it to gallery</string>
		<string name="upload_photo_no_photo">No photo to send, please try again to select a photo !</string>
		<string name="upload_photo_send_to">You are about to send a photo to :</string>
		<string name="upload_photo_gallery_url">- gallery url</string>
		<string name="upload_photo_connected_as">- connected as user</string>
		<string name="upload_photo_choose_a_name">Choose a name for this photo: </string>
		<string name="upload_photo_choose_destination">Choose your destination album : </string>
		<string name="upload_photo_send">Send</string>
		<string name="upload_photo_done">Done</string>
		<string name="upload_photo_settings">Go to settings</string>
		
		<!--  new string since 1.6.0 -->
		<string name="images_successfully_created">Images were successfully added !</string>
		<string name="upload_settings">Upload settings</string>
		<string name="default_summary_title">Default Summary</string>
		<string name="default_summary_summary">Photos sent with G2Android will have this summary set</string>
		<string name="default_description_title">Default Description</string>
		<string name="default_description_summary">Photos sent with G2Android will have this description set</string>
		<string name="multiple_files_upload">Multiple files upload</string>
		<string name="no_summary_available">No summary available</string>
		<string name="advanced_control_title">Advanced controls</string>

		
		
</resources>
