<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * G2Android
 * Copyright (c) 2009 Anthony Dahanne
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
 * for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/background"
	android:padding="15dip">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/g2android_title" android:textColor="@color/title_color"
		android:gravity="center" android:textSize="28.5sp"
		android:layout_marginBottom="15dip" />
	<ImageView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:src="@drawable/g2android" android:scaleType="fitXY"
		android:adjustViewBounds="true"  android:maxHeight="230dip" android:cropToPadding="true" android:layout_marginBottom="2dip" />


	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center"  android:text="@string/enter_gallery_title"
		android:id="@+id/enter_gallery_button"  />

<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:text="@string/g2android_no_gallery_configured" android:id="@+id/gallery_configured"
	android:textColor="@color/text_color" android:gravity="center"
	android:textSize="8.5sp" />
	<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:text="@string/not_logged_in" android:id="@+id/loggedin_as_id"
	android:textColor="@color/logged_color" android:gravity="center"
	android:textSize="10.5sp" />
	


</LinearLayout>
