<?xml version="1.0" encoding="utf-8"?>
	<!--
		/* * G2Android * Copyright (c) 2009 Anthony Dahanne * This program is
		free software; you can redistribute it and/or modify * it under the
		terms of the GNU General Public License as published by * the Free
		Software Foundation; either version 2 of the License, or * (at your
		option) any later version. * * This program is distributed in the hope
		that it will be useful, but * WITHOUT ANY WARRANTY; without even the
		implied warranty of MERCHANTABILITY * or FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License * for more details. * *
		You should have received a copy of the GNU General Public License
		along * with this program; if not, write to the Free Software
		Foundation, Inc., * 59 Temple Place, Suite 330, Boston, MA 02111-1307
		USA */
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/aboutscrollview"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:text="@string/app_name" android:id="@+id/versionName"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:paddingTop="15px"
				android:textStyle="bold" android:layout_gravity="center_vertical"
				android:textColor="#ffffff" />
			<TextView android:text="@string/current_version" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingLeft="15px"
				android:textColor="#ffffff" />
			<TextView android:text="@string/project_home"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingTop="15px" android:paddingLeft="15px"
				android:textStyle="bold" android:textColor="#ffffff" />
			<TextView android:text="@string/project_home_url" android:autoLink="web"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				 android:textColorLink="#ffffff"
				android:paddingLeft="15px" android:textSize="12sp"
				android:textColor="#ffffff" />
			<TextView android:text="License: " android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="@string/licence"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="http://www.gnu.org/licenses/gpl.html"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:autoLink="web" android:textColorLink="#ffffff"
				android:paddingLeft="15px" android:textSize="12sp"
				android:textColor="#ffffff" />
			<TextView android:text="Author: " android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="Anthony Dahanne"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="http://blog.dahanne.net/about" android:textColorLink="#ffffff"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:autoLink="web" />
			<TextView android:text="Graphics, art: " android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="Dan"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="http://www.gdl3d.com/" android:textColorLink="#ffffff"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:autoLink="web" />
			<TextView android:text="Chinese translation: " android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="GoApk.com"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="http://goapk.com" android:textColorLink="#ffffff"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:autoLink="web" />
			<TextView android:text="Did you find a bug ?" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="Please report it !"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="http://code.google.com/p/g2android/issues/list" android:textColorLink="#ffffff"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:autoLink="web" />
			<TextView android:text="Do you love this app ?" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="You can flattr me to show your support !"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" />
			<TextView android:text="https://flattr.com/thing/38389/G2Android" android:textColorLink="#ffffff"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:autoLink="web" />
			<TextView android:paddingTop="15px"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:textColor="#ffffff" android:text="@string/what_is_g2android"
				android:autoLink="web"  android:textColorLink="#ffffff" />
				
		</LinearLayout>
	</ScrollView>
</LinearLayout>